made edit to css to handle scrolling issue on ios

--- a/client/main.css
+++ b/client/main.css
@@ -7,7 +7,8 @@ body {
   padding: 0;
   margin: 0;
   height: 100%;
-  overflow: auto;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   font-family: "Oswald", sans-serif;
 }
 #root {
